fixed gap

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -274,6 +274,7 @@ nav a {
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
+    gap: 40px;
   }
   
   /* Style each tab content individually */
